Fixed: header title wrapping
Media query css to keep the header title from overlapping the logo

--- a/data/Themes/COB/public/css/screen.scss
+++ b/data/Themes/COB/public/css/screen.scss
@@ -1,7 +1,6 @@
 @import 'scss/vars';
 
 @import 'scss/html-elements';
-@import 'scss/layout';
 @import 'scss/header';
 
 #errorMessages {
@@ -9,8 +8,11 @@
 }
 
 html { background-color: $color-selected-background; }
-main {
-    display: flex; align-items: center; justify-content: center;
+@media (min-width: 700px) {
+    main {
+        display: flex; align-items: center; justify-content: center;
+        margin: $size-gutter;
+    }
 }
 section {
     background-color: $color-content-background;
